# tinypixels

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  output.txt  pyproject.toml  requirements.txt
.github/: labeler_config.yaml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  docs_issue.yml  feature_request.yml
.github/workflows/: labeler.yml  lint.yml
scripts/: labeler.py
src/tests/: test_compressor.py
src/tinypixels/: cli.py  compressor.py
tests/: test_cli.py  test_compressor.py  test_integration.py
