[project]
name = "tinypixels"
version = "1.0.0"
description = "A lightweight tool to compress and optimize images"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name="Nafas Ebrahimi" }]
requires-python = ">=3.14"
dependencies = ["Pillow"]

[project.scripts]
tinypixels = "src.cli:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
