[project]
name = "tinypixels"
version = "1.0.0"
description = "A lightweight tool to compress and optimize images"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Nafas Ebrahimi" }]
requires-python = ">=3.10"
dependencies = ["Pillow"]

[project.scripts]
tinypixels = "tinypixels.cli:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
